Use temporary files for multipart uploads